# FiletransHelper

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  config.rs  lib.rs  main.rs
src-tauri/src/device/: manager.rs
src-tauri/src/events/: emitter.rs
src-tauri/src/message/: manager.rs
src-tauri/src/security/: keypair.rs
src-tauri/src/server/: http.rs  mod.rs  routes.rs  ws.rs
src-tauri/src/store/: sqlite.rs
src-tauri/src/transfer/: manager.rs
src-tauri/src/transport/: http.rs  mod.rs  quic.rs  ws_client.rs
src/api/: tauri.ts  types.ts
src/components/: ChatPanel.tsx  DeviceList.tsx  SettingsPanel.tsx
src/store/: deviceStore.ts  messageStore.ts  settingsStore.ts  transferStore.ts
