[package]
name = "zerodrop"
version = "0.1.0"
description = "ZeroDrop private file assistant"
authors = ["ZeroDrop"]
edition = "2021"
build = "build.rs"

[lib]
name = "zerodrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
icu_collections = { version = "=2.0.0", features = ["alloc"] }
icu_locale_core = { version = "=2.0.0", features = ["alloc"] }
icu_normalizer = { version = "=2.0.0", features = ["default"] }
icu_normalizer_data = "=2.0.0"
icu_properties = { version = "=2.0.1", features = ["default", "alloc"] }
icu_properties_data = "=2.0.1"
icu_provider = { version = "=2.0.0", features = ["alloc"] }
tauri-build = { version = "=2.0.0", features = [] }
writeable = { version = "=0.6.3", features = ["alloc"] }

[dependencies]
axum = { version = "0.7", features = ["ws"] }
dirs = "5"
futures-util = { version = "0.3.32", features = ["sink"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "=2.0.0", features = [] }
tauri-codegen = "=2.0.0"
tauri-macros = "=2.0.0"
tauri-runtime = "=2.0.0"
tauri-runtime-wry = "=2.0.0"
tauri-utils = "=2.0.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "net", "time", "sync"] }
tokio-tungstenite = { version = "=0.24.0", default-features = false, features = ["connect"] }
toml = "0.8.19"
uuid = { version = "1.10", features = ["v4", "serde"] }

# Keep the Phase 0/1 dependency graph compatible with the local Rust 1.85 toolchain.
idna = "=1.0.3"
idna_adapter = "=1.2.1"
icu_collections = { version = "=2.0.0", features = ["alloc"] }
icu_locale_core = { version = "=2.0.0", features = ["alloc"] }
icu_normalizer = { version = "=2.0.0", features = ["default"] }
icu_normalizer_data = "=2.0.0"
icu_properties = { version = "=2.0.1", features = ["default", "alloc"] }
icu_properties_data = "=2.0.1"
icu_provider = { version = "=2.0.0", features = ["alloc"] }
plist = "=1.7.0"
reqwest = { version = "=0.12.23", default-features = false, features = ["json", "stream"] }
rusqlite = { version = "=0.29.0", features = ["bundled"] }
serde_with = "=3.14.1"
time = "=0.3.44"
url = "=2.5.4"
writeable = { version = "=0.6.3", features = ["alloc"] }
